<resources>
    <string name="app_name">Top TV Series</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Prijava</string>
    <string name="no_account">Nemate račun? Jedan klik Vas vodi do registracije.</string>
    <string name="password">Lozinka</string>
    <string name="email">E-mail</string>
    <string name="name">Ime</string>
    <string name="surname">Prezime</string>
    <string name="register">Registriraj me</string>
    <string name="comment">Komentar</string>
    <string name="name_surname">Branimir Butković</string>
    <string name="logout">Odjava</string>
    <string name="popular_tv_series">Popular TV series</string>
    <string name="favorite_tv_series">Favorite TV series</string>
</resources>